erDiagram
    PERSONNE ||--o{ VENTE : "achete lors de"
    VENTE ||--|{ OBJET : "comporte (RG9)"
    PERSONNE {
        int id_personne PK
    }
    VENTE {
        int id_vente PK
        date date_vente
        enum mode_paiement "especes | carte | cheque (RG10)"
        int id_personne FK "NULL si client de passage"
    }
    OBJET {
        int id_objet PK
        numeric prix_affiche "prix en rayon"
        numeric prix_paye "prix encaisse (RG10)"
        int id_vente FK "NULL tant que non vendu"
    }
